change of name to voileipa.JPG

--- a/suolaiset.html
+++ b/suolaiset.html
@@ -106,7 +106,7 @@
 
             <div class="responsive">
                 <div class="gallery">
-                    <img src="images/kakku/voileip%C3%A4kakku.JPG" alt="voil" width="600" height="400">
+                    <img src="images/kakku/voileipa.JPG" alt="voil" width="600" height="400">
 
                     <div class="desc">
 
