--- a/suolaiset.html
+++ b/suolaiset.html
@@ -106,7 +106,7 @@
 
             <div class="responsive">
                 <div class="gallery">
-                    <img src="images/kakku/voileipa.jpg" alt="voil" width="600" height="400">
+                    <img src="images/kakku/voilepa.jpg" alt="voileipä" width="600" height="400">
 
                     <div class="desc">
 
