--- a/kakut.html
+++ b/kakut.html
@@ -109,7 +109,7 @@
 
             <div class="responsive">
                 <div class="gallery">
-                    <img src="images/kakku/p%C3%A4%C3%A4si%C3%A4iskakku.JPG" alt="pä" width="600" height="400">
+                    <img src="images/kakku/pasiaiskakku.JPG" alt="pä" width="600" height="400">
 
                     <div class="desc">Pääsiäiskakku <br />Pohja: 150g pääsiäismunasuklaata, 150g margariinia tai voita, 4 kananmunaa, 2 dl sokeria, 2 ½ dl vehnäjauhoja, 2 rkl kaakaojauhetta, 1 ½ tl leivinjauhetta <br />Kostutus: 1 ½ dl vahvaa kahvia, ½ dl konjakkia <br />Täyte 1: 1 prk piltti tyrnisosetta 1 prk persikoita valutettuna 1 sitruunan mehu ½ dl hillosokeria Kiehauta nämä hilloksi. Täyte 2: 2 ½ dl flora vispiä, 150g maitosuklaapralineja <br />Sulata maitosuklaapralinet, jäähdytä hetki, lisää flora vispi ja vispaa vaahdoksi. Säästä 1/3 suklaakermasta kakun pintaa varten. <br />Pinta: 1/3 suklaakermaa, 13% maustamaton tuorejuusto 1 mignon suklaamuna <br />Sulata mignon suklaamuna. Ota loput suklaakermasta, lisää tuorejuusto ja sulatettu mignon. Levitä kakun päälle. Koristele halutessasi ripottelemalla tomusokeria kakkupaperin läpi sekä marmeladikarkeilla.</div>
                 </div>
